Added automatic on this page feature #831

--- a/pages/about.html
+++ b/pages/about.html
@@ -7,34 +7,25 @@ permalink: "about.html"
 
 <h1 class="mt-lg-0">About the State Web Template</h1>
 
-<nav aria-labelledby="page-navigation-label" class="page-navigation">
- <div id="page-navigation-label" class="label">On this page</div>
- <ul class="columns-2">
-  <li><a href="#Why-our-template-matters">Why our template matters</a></li>
-  <li><a href="#Our-mission">Our mission</a></li>
-  <li><a href="#Our-vision">Our vision</a></li>
-  <li><a href="#History">History</a></li>
-  <li><a href="#Looking-ahead">Looking ahead</a></li>
- </ul>
-</nav>
+<nav class="page-navigation"></nav>
 
 <p class="lead">The State Web Template is an open source web template maintained by the Office of Digital Services
  within the Department of Technology. Our components are designed to enhance the user experience and help digital
  teams create attractive, consistent, and accessible digital products. The State Web Template will always be open
  source, collaborative and evolving.</p>
 
-<h2 id="Why-our-template-matters">Why our template matters</h2>
+<h2>Why our template matters</h2>
 <p>Digitally connecting Californians to the government services they need has become increasingly more critical. Great
  design is central to succeeding in that effort. We offer this web template to help make digital information and
  services easier to use. </p>
 
-<h2 id="Our-mission">Our mission</h2>
+<h2>Our mission</h2>
 <p>Enhance the delivery of digital services for California residents through user experience design. </p>
 
-<h2 id="Our-vision">Our vision</h2>
+<h2>Our vision</h2>
 <p>Create excellent digital state services for California residents that are inclusive, accessible and performant.</p>
 
-<h2 id="History">History</h2>
+<h2>History</h2>
 <p>A long time ago, the eServices Office was established to lead statewide initiatives providing leadership in
  statewide web policy, CA.gov portal and the digital government footprint. We have come a long way but our core vision
  and mission has not changed.</p>
@@ -42,7 +33,7 @@ permalink: "about.html"
  The state web template has evolved from a technical toolset to a digital standard and tactical playbook on delivering
  useful, accessible, and performant user experiences.</p>
 
-<h2 id="Looking-ahead">Looking ahead</h2>
+<h2>Looking ahead</h2>
 <p>Over the years, and with each state web template release, we've improved the access of online government services
  with:</p>
 <ul>
