--- a/pages/components.html
+++ b/pages/components.html
@@ -210,6 +210,33 @@ permalink: "components.html"
    </div>
   </a>
  </div>
+
+ <div class="col-md-4 m-t-md">
+  <a href="/components/page-navigation.html"
+   class="no-underline d-block color-gray-dark brd-gray-light brd-solid-1 rounded-5 h-100 transition-0_3 shadow2-hover color-primary color-primary-hover"
+   title="Page navigation component example">
+   <div class="p-a-md d-flex align-content-center">
+    <img src="/images/components/icon-pagenav.jpg" alt="Page navigation component" class="img-fluid">
+   </div>
+   <div class="p-a">
+    <h3 class="h5 m-t-0">Page navigation</h3>
+    <p class="font-size-16 color-black">Allows navigation to content sections available on your page.
+    </p>
+   </div>
+  </a>
+ </div>
+
+
+
+
+
+</div>
+
+
+
+
+<div class="row">
+
  <div class="col-md-4 m-t-md">
   <a href="/components/parallax.html"
    class="no-underline d-block color-gray-dark brd-gray-light brd-solid-1 rounded-5 h-100 transition-0_3 shadow2-hover color-primary color-primary-hover"
@@ -224,17 +251,6 @@ permalink: "components.html"
    </div>
   </a>
  </div>
-
-
-
-</div>
-
-
-
-
-<div class="row">
-
-
 
 
  <div class="col-md-4 m-t-md">
@@ -264,6 +280,14 @@ permalink: "components.html"
   </a>
  </div>
 
+
+</div>
+
+
+
+
+
+<div class="row">
  <div class="col-md-4 m-t-md">
   <a href="/components/social-media-icons.html"
    class="no-underline d-block color-gray-dark brd-gray-light brd-solid-1 rounded-5 h-100 transition-0_3 shadow2-hover color-primary color-primary-hover"
@@ -278,13 +302,7 @@ permalink: "components.html"
    </div>
   </a>
  </div>
-</div>
 
-
-
-
-
-<div class="row">
  <div class="col-md-4 m-t-md">
   <a href="/components/table.html"
    class="no-underline d-block color-gray-dark brd-gray-light brd-solid-1 rounded-5 h-100 transition-0_3 shadow2-hover color-primary color-primary-hover"
