--- a/pages/download-and-setup.html
+++ b/pages/download-and-setup.html
@@ -31,20 +31,12 @@ permalink: "download-and-setup.html"
   <h1 id="Downloadandsetup" class="mt-lg-0">Download and setup</h1>
 
 
-  <nav aria-labelledby="page-navigation-label" class="page-navigation">
-   <div id="page-navigation-label" class="label">On this page</div>
-   <ul>
-    <li><a href="#Commonlinks">Common file links</a></li>
-    <li><a href="#Implementation">Template implementation roadmap</a></li>
-    <li><a href="#FolderStructure">Folder structure and files</a></li>
-    <li><a href="#Eleventy">Using Eleventy</a></li>
-   </ul>
-  </nav>
+  <nav class="page-navigation"></nav>
 
 
   <div class="p-a-md p-b-lg bg-gray-75">
 
-   <h2 id="Commonlinks" class="h3 mt-0">Common web template files</h2>
+   <h2 class="h3 mt-0">Common web template files</h2>
 
    <div class="flex-container justify-content-between gap-3 font-size-14">
     <div class="brd-solid-1 brd-gray-light bg-white p-3 rounded-5">
@@ -85,7 +77,7 @@ permalink: "download-and-setup.html"
   </div>
   <p class="m-t-lg">Here are the steps to follow when implementing the V6 State Web Template.
   </p>
-  <h2 id="Implementation">Template implementation roadmap</h2>
+  <h2>Template implementation roadmap</h2>
 
   <p class="m-b-md">These are the high-level steps to take when you upgrade to the latest template.</p>
 
@@ -201,7 +193,7 @@ permalink: "download-and-setup.html"
   </ol>
 
 
-  <h2 id="FolderStructure">Folder structure and files</h2>
+  <h2>Folder structure and files</h2>
 
   <p>Discover what’s in the V6 State Template package. Review <a href="/download-and-setup.html">Download
     and setup</a> for more details.</p>
@@ -262,7 +254,7 @@ permalink: "download-and-setup.html"
   </div>
 
 
-  <h2 id="Eleventy">Using Eleventy</h2>
+  <h2>Using Eleventy</h2>
 
   <h3>Step 1. Clone or download the template for GitHub</h3>
 
@@ -290,7 +282,8 @@ permalink: "download-and-setup.html"
 
   <pre>node -v</pre>
 
-  <p>This should print the version number. If you don’t have Node, you can download it from <a href="https://nodejs.org/">nodejs.org</a> and install it.</p>
+  <p>This should print the version number. If you don’t have Node, you can download it from <a
+    href="https://nodejs.org/">nodejs.org</a> and install it.</p>
 
   <h3>Step 4. Use NPM to run the state web template locally</h3>
 
