--- a/pages/sample/accordion.html
+++ b/pages/sample/accordion.html
@@ -8,22 +8,14 @@ permalink: "/components/accordion.html"
 
 <h1 class="mt-lg-0">Accordion</h1>
 
-<nav aria-labelledby="page-navigation-label" class="page-navigation">
- <div id="page-navigation-label" class="label">On this page</div>
- <ul>
-  <li><a href="#Basic-accordion">Basic accordion</a></li>
-  <li><a href="#Accordion-list">Accordion list</a></li>
-  <li><a href="#Usage">Usage</a></li>
-  <li><a href="#Accessibility">Accessibility</a></li>
- </ul>
-</nav>
+<nav class="page-navigation"></nav>
 
 <p>Accordions are expandable sections of content. Each section contains a summary element and more body text when
  opened.</p>
 
 <p>Accordions keep pages clean by hiding information that most people do not need to see.</p>
 
-<h2 id="Basic-accordion">Basic accordion</h2>
+<h2>Basic accordion</h2>
 
 
 <!--TABS-->
@@ -87,7 +79,7 @@ permalink: "/components/accordion.html"
 
 
 
-<h2 id="Accordion-list">Accordion list</h2>
+<h2>Accordion list</h2>
 <!--TABS-->
 <div class="tab-group responsive">
  <ul id="tabs2" class="nav nav-tabs" role="tablist">
@@ -146,7 +138,7 @@ permalink: "/components/accordion.html"
 </div>
 <!--END TABS-->
 
-<h2 id="Usage">Usage</h2>
+<h2>Usage</h2>
 
 <h3 class="m-t">When and how to use it</h3>
 <p>Use accordions to hide content most people do not need.</p>
@@ -182,5 +174,5 @@ permalink: "/components/accordion.html"
 <p>Do not put content that everyone needs to see in an accordion. Keep it in the body content.</p>
 
 
-<h2 id="Accessibility">Accessibility</h2>
+<h2>Accessibility</h2>
 {% include "../../src/_includes/modules/accessibility.html" %}
