--- a/pages/sample/blockquote.html
+++ b/pages/sample/blockquote.html
@@ -10,22 +10,13 @@ permalink: "components/blockquote.html"
 </style>
 
 <h1 class="mt-lg-0">Blockquote</h1>
-<nav aria-labelledby="page-navigation-label" class="page-navigation">
- <div id="page-navigation-label" class="label">On this page</div>
- <ul class="columns-2">
-  <li><a href="#Basic-blockquote">Basic blockquote</a></li>
-  <li><a href="#Blockquote-with-image">Blockquote with image</a></li>
-  <li><a href="#Pull-quote">Pull quote</a></li>
-  <li><a href="#Prominent-blockquote">Prominent blockquote</a></li>
-  <li><a href="#Usage">Usage</a></li>
-  <li><a href="#Accessibility">Accessibility</a></li>
- </ul>
-</nav>
+<nav class="page-navigation"></nav>
+
 <p>A blockquote emphasizes quotes or excerpts related to the page content.</p>
 <p>Blockquote text is styled differently from the main text and is typically used for important quotations.
 </p>
 
-<h2 id="Basic-blockquote">Basic blockquote</h2>
+<h2>Basic blockquote</h2>
 
 <!--TABS-->
 <div class="tab-group responsive">
@@ -90,7 +81,7 @@ permalink: "components/blockquote.html"
 
 
 
-<h2 id="Blockquote-with-image">Blockquote with image</h2>
+<h2>Blockquote with image</h2>
 
 
 <!--TABS-->
@@ -156,7 +147,7 @@ permalink: "components/blockquote.html"
 
 
 
-<h2 id="Pull-quote">Pull quote</h2>
+<h2>Pull quote</h2>
 
 <!--TABS-->
 <div class="tab-group responsive">
@@ -217,7 +208,7 @@ permalink: "components/blockquote.html"
 
 
 
-<h2 id="Prominent-blockquote">Prominent blockquote</h2>
+<h2>Prominent blockquote</h2>
 
 
 <!--TABS-->
@@ -276,7 +267,7 @@ permalink: "components/blockquote.html"
 <!--END TABS-->
 
 
-<h2 id="Usage">Usage</h2>
+<h2>Usage</h2>
 
 <h3 class="m-t">When and how to use it</h3>
 <p>Use blockquotes to display a quote from a person or a source.</p>
@@ -289,5 +280,5 @@ permalink: "components/blockquote.html"
 <p>Do not use more than one block quote variation on a single page. </p>
 <p>Avoid hyperlinks inside the blockquote. Use the body content to link to additional information from the speaker.</p>
 
-<h2 id="Accessibility">Accessibility</h2>
+<h2>Accessibility</h2>
 {% include "../../src/_includes/modules/accessibility.html" %}
