--- a/pages/sample/card-grid.html
+++ b/pages/sample/card-grid.html
@@ -8,16 +8,7 @@ permalink: "patterns/card-grid.html"
 
 <h1 class="mt-lg-0">Card grid</h1>
 
-<nav aria-labelledby="page-navigation-label" class="page-navigation">
- <div id="page-navigation-label" class="label">On this page</div>
- <ul class="columns-2">
-  <li><a href="#Basic">Basic</a></li>
-  <li><a href="#News-grid">News grid</a></li>
-  <li><a href="#Imagery">Imagery</a></li>
-  <li><a href="#Usage">Usage</a></li>
-  <li><a href="#Accessibility">Accessibility</a></li>
- </ul>
-</nav>
+<nav class="page-navigation"></nav>
 
 <p>There are three types of card grids to present related information: </p>
 <ul>
@@ -26,7 +17,7 @@ permalink: "patterns/card-grid.html"
  <li>Card grid with imagery</li>
 </ul>
 
-<h2 id="Basic">Basic</h2>
+<h2>Basic</h2>
 
 <p>A basic card grid highlights content in grids. It visually shows content or elements that belong together with a
  button to indicate a call-to-action.</p>
@@ -93,7 +84,7 @@ permalink: "patterns/card-grid.html"
 
 
 
-<h2 id="News-grid">News grid</h2>
+<h2>News grid</h2>
 <p>The news grid features information relevant to your agency or department. It offers you space to highlight current
  events, topics or developments. Use this option to link to a news section within your site or a related, official press
  release. Add an optional date, author and agency name.</p>
@@ -157,7 +148,7 @@ permalink: "patterns/card-grid.html"
 
 
 
-<h2 id="Imagery">Imagery</h2>
+<h2>Imagery</h2>
 <p>Imagery helps to visually communicate information. Use it to help your visitors understand your content better.</p>
 <!--TABS-->
 <div class="tab-group responsive">
@@ -222,7 +213,7 @@ permalink: "patterns/card-grid.html"
 
 
 
-<h2 id="Usage">Usage</h2>
+<h2>Usage</h2>
 <h3>When and how to use it </h3>
 <h4>Card grid</h4>
 
@@ -261,5 +252,5 @@ permalink: "patterns/card-grid.html"
    guidelines</a>.</li>
 
 </ul>
-<h2 id="Accessibility">Accessibility</h2>
+<h2>Accessibility</h2>
 {% include "../../src/_includes/modules/accessibility.html" %}
