--- a/pages/sample/countdown-timer.html
+++ b/pages/sample/countdown-timer.html
@@ -29,14 +29,7 @@ permalink: "components/countdown-timer.html"
 
 <h1 class="mt-lg-0">Countdown timer</h1>
 
-<nav aria-labelledby="page-navigation-label" class="page-navigation">
- <div id="page-navigation-label" class="label">On this page</div>
- <ul>
-  <li><a href="#Sample">Sample</a></li>
-  <li><a href="#Usage">Usage</a></li>
-  <li><a href="#Accessibility">Accessibility</a></li>
- </ul>
-</nav>
+<nav class="page-navigation"></nav>
 
 <p>The countdown timer component helps visitors visualize the counting toward or away from a fixed point in
  time. </p>
@@ -50,7 +43,7 @@ permalink: "components/countdown-timer.html"
 </ul>
 
 
-<h2 id="Sample">Sample</h2>
+<h2>Sample</h2>
 
 
 <!--TABS-->
@@ -291,7 +284,7 @@ permalink: "components/countdown-timer.html"
 
 
 
-<h2 id="Usage">Usage</h2>
+<h2>Usage</h2>
 
 <h3>When and how to use it</h3>
 <p>Use the countdown timer to emphasize important events. These events might include:</p>
@@ -309,7 +302,7 @@ permalink: "components/countdown-timer.html"
 <p>Try not to use months in your countdown as they present a fluctuating metric of time.</p>
 <p>Avoid excessive timeframes (more than 1 year) as this renders the countdown useless to visitors.</p>
 
-<h2 id="Accessibility">Accessibility</h2>
+<h2>Accessibility</h2>
 {% include "../../src/_includes/modules/accessibility.html" %}
 
 
