--- a/pages/sample/form-elements.html
+++ b/pages/sample/form-elements.html
@@ -30,19 +30,7 @@ permalink: "components/form-elements.html"
 
 <h1 class="mt-lg-0">Forms elements</h1>
 
-<nav aria-labelledby="page-navigation-label" class="page-navigation">
- <div id="page-navigation-label" class="label">On this page</div>
- <ul class="columns-2">
-  <li><a href="#Label">Label</a></li>
-  <li><a href="#Text-field-or-text-area">Text field or text area</a></li>
-  <li><a href="#Checkbox">Checkbox</a></li>
-  <li><a href="#Radio-button">Radio button</a></li>
-  <li><a href="#Dropdown-menu">Dropdown menu</a></li>
-  <li><a href="#File-input">File input</a></li>
-  <li><a href="#Usage">Usage</a></li>
-  <li><a href="#Accessibility">Accessibility</a></li>
- </ul>
-</nav>
+<nav class="page-navigation"></nav>
 
 <p>A form allows visitors to submit information to a server.</p>
 <p>Common form elements include:</p>
@@ -58,7 +46,7 @@ permalink: "components/form-elements.html"
 </ul>
 
 
-<h2 id="Label" class=" m-b-0">Label</h2>
+<h2 class=" m-b-0">Label</h2>
 <p>The label should:</p>
 <ul>
  <li>Describe the purpose of the text field or other item.</li>
@@ -135,7 +123,7 @@ permalink: "components/form-elements.html"
 
 
 
-<h2 id="Text-field-or-text-area">Text field or text area</h2>
+<h2>Text field or text area</h2>
 <p>A text field allows visitors to write or edit one line of text.</p>
 
 
@@ -308,7 +296,7 @@ permalink: "components/form-elements.html"
 
 
 
-<h2 id="Checkbox">Checkbox</h2>
+<h2>Checkbox</h2>
 <p>A checkbox allows visitors to select one or more options from a number of choices.</p>
 
 <!--TABS-->
@@ -373,7 +361,7 @@ permalink: "components/form-elements.html"
 
 
 
-<h2 id="Radio-button">Radio button</h2>
+<h2>Radio button</h2>
 <p>A radio button allows visitors to select only one option from a number of choices.</p>
 
 <!--TABS-->
@@ -437,7 +425,7 @@ permalink: "components/form-elements.html"
 
 
 
-<h2 id="Dropdown-menu" class=" m-b-0">Dropdown menu</h2>
+<h2 class=" m-b-0">Dropdown menu</h2>
 <p class="subtitle mb-4">Other names: select</p>
 <p>A dropdown menu hides options by default. When interacted with, the dropdown menu displays a list of options visitors
  may select.</p>
@@ -504,7 +492,7 @@ permalink: "components/form-elements.html"
 
 
 
-<h2 id="File-input" class=" m-b-0">File input</h2>
+<h2 class=" m-b-0">File input</h2>
 <p>A file input lets the user choose one or more files from their device storage. Once chosen, the files can be uploaded
  to a server using form submission.</p>
 
@@ -566,7 +554,7 @@ permalink: "components/form-elements.html"
 <!--END TABS-->
 
 
-<h2 id="Usage">Usage</h2>
+<h2>Usage</h2>
 
 <h3 class="m-t">When and how to use it</h3>
 <p>Use a form when visitor input is required to complete an action. </p>
@@ -594,5 +582,5 @@ permalink: "components/form-elements.html"
  explain why the visitor cannot progress in the form with a clear, concise error message.</p>
 
 
-<h2 id="Accessibility">Accessibility</h2>
+<h2>Accessibility</h2>
 {% include "../../src/_includes/modules/accessibility.html" %}
