--- a/pages/sample/icons.html
+++ b/pages/sample/icons.html
@@ -342,20 +342,14 @@ permalink: "visual-design/icons.html"
 
   <h1 class="mt-lg-0" id="Icons">Icons</h1>
 
-  <nav aria-labelledby="page-navigation-label" class="page-navigation">
-   <div id="page-navigation-label" class="label">On this page</div>
-   <ul>
-    <li><a href="#How-to-use-icons">How to use icons</a></li>
-    <li><a href="#Search-icons">Search icons</a></li>
-   </ul>
-  </nav>
+  <nav class="page-navigation"></nav>
 
 
   <p>Icons are visual representations of commands, devices, directories, or common actions. We use CSS classes to
    customize icon color for compatibility with all popular browsers.</p>
 
 
-  <h2 id="How-to-use-icons">How to use icons</h2>
+  <h2>How to use icons</h2>
   <p>Icon color and font can be styled using the same CSS rules used to style other text on a page. Keep in mind,
    color and font size will change the size of the icon.</p>
 
@@ -391,7 +385,7 @@ permalink: "visual-design/icons.html"
   </div>
 
 
-  <h2 id="Search-icons">Search icons</h2>
+  <h2>Search icons</h2>
   <p>Use the search to find a specific icon. You can also browse icons below.</p>
 
 
