--- a/pages/sample/lists.html
+++ b/pages/sample/lists.html
@@ -9,19 +9,11 @@ permalink: "components/lists.html"
 
 <h1 class="mt-lg-0">Lists</h1>
 
-<nav aria-labelledby="page-navigation-label" class="page-navigation">
- <div id="page-navigation-label" class="label">On this page</div>
- <ul>
-  <li><a href="#Unordered-list">Unordered list</a></li>
-  <li><a href="#Ordered-list">Ordered list</a></li>
-  <li><a href="#Usage">Usage</a></li>
-  <li><a href="#Accessibility">Accessibility</a></li>
- </ul>
-</nav>
+<nav class="page-navigation"></nav>
 
 <p>A list is a vertical grouping of related content. They are typically bulleted or numbered.</p>
 
-<h2 id="Unordered-list">Unordered list</h2>
+<h2>Unordered list</h2>
 <p>Use an unordered list (bulleted) if the order of grouped items does not matter.</p>
 <ul>
  <li>Arrange list items in a logical order that makes sense to the audience (such as days of the week).
@@ -96,7 +88,7 @@ permalink: "components/lists.html"
 
 
 
-<h2 id="Ordered-list">Ordered list</h2>
+<h2>Ordered list</h2>
 <p>Use an ordered list (numbered or alphabetical) to group a set of related items in a specific order.
 </p>
 <p>Ordered lists use letters or numbers at the beginning of a list in sequential order. They usually start at 1, I, or
@@ -159,7 +151,7 @@ permalink: "components/lists.html"
 </div>
 <!--END TABS-->
 
-<h2 id="Usage">Usage</h2>
+<h2>Usage</h2>
 <h3>When and how to use it</h3>
 <p>Use lists to make blocks of text easier to read, and to break information into manageable chunks.</p>
 <p>Use bulleted lists when you don't need to convey a specific order for list items.</p>
@@ -170,5 +162,5 @@ permalink: "components/lists.html"
 <p>Do not use Roman numerals, which are not read properly by screen readers.</p>
 
 
-<h2 id="Accessibility">Accessibility</h2>
+<h2>Accessibility</h2>
 {% include "../../src/_includes/modules/accessibility.html" %}
