--- a/pages/sample/side-navigation.html
+++ b/pages/sample/side-navigation.html
@@ -10,24 +10,15 @@ permalink: "/components/side-navigation.html"
 <p class="subtitle">Other names: page index</p>
 
 
-<nav aria-labelledby="page-navigation-label" class="page-navigation">
- <div id="page-navigation-label" class="label">On this page</div>
- <ul class="columns-2">
-  <li><a href="#Single-level-list">Single-level list</a></li>
-  <li><a href="#Multi-level-list">Multi-level list</a></li>
-  <li><a href="#Accordion-list">Accordion list</a></li>
-  <li><a href="#Scroll-bar">Scroll bar</a></li>
-  <li><a href="#Usage">Usage</a></li>
-  <li><a href="#Accessibility">Accessibility</a></li>
- </ul>
-</nav>
+
+<nav class="page-navigation"></nav>
 
 
 <p>The side navigation menu allows visitors to find related pages within a topic. It provides a deeper level of
  navigation for larger websites. Selecting a side menu item will take the visitor to that page.</p>
 
 
-<h2 id="Single-level-list">Single-level list</h2>
+<h2>Single-level list</h2>
 
 <!--TABS-->
 <div class="tab-group responsive">
@@ -115,7 +106,7 @@ permalink: "/components/side-navigation.html"
 
 
 
-<h2 id="Multi-level-list">Multi-level list</h2>
+<h2>Multi-level list</h2>
 <!--TABS-->
 <div class="tab-group responsive">
  <ul id="tabs2" class="nav nav-tabs" role="tablist">
@@ -218,7 +209,7 @@ permalink: "/components/side-navigation.html"
 <!--END TABS-->
 
 
-<h2 id="Accordion-list">Accordion list</h2>
+<h2>Accordion list</h2>
 
 
 <!--Tabs 4-->
@@ -311,12 +302,12 @@ permalink: "/components/side-navigation.html"
 <!--End tabs 4-->
 
 
-<h2 id="Scroll-bar">Scroll bar</h2>
+<h2>Scroll bar</h2>
 <p>This built-in feature will only activate when side navigation is longer than the current viewport area.</p>
 
 
 
-<h2 id="Usage">Usage</h2>
+<h2>Usage</h2>
 
 <h3 class="m-t">When and how to use it</h3>
 <p>The side navigation component helps visitors find pages within a website. It complements site navigation. It helps
@@ -432,5 +423,5 @@ permalink: "/components/side-navigation.html"
  </div>
 </div>
 <hr>
-<h2 id="Accessibility">Accessibility</h2>
+<h2>Accessibility</h2>
 {% include "../../src/_includes/modules/accessibility.html" %}
