--- a/pages/sample/structure-search.html
+++ b/pages/sample/structure-search.html
@@ -28,16 +28,7 @@ permalink: "structure/search.html"
   <h1 class="mt-lg-0 m-b-0">Search</h1>
   <p class="subtitle">Other names: searchbox, search field</p>
 
-  <nav aria-labelledby="page-navigation-label" class="page-navigation">
-   <div id="page-navigation-label" class="label">On this page</div>
-   <ul class="columns-2">
-    <li><a href="#Active-search">Active search</a></li>
-    <li><a href="#Inactive-search">Inactive search</a></li>
-    <li><a href="#Featured-search">Featured search</a></li>
-    <li><a href="#Usage">Usage</a></li>
-    <li><a href="#Accessibility">Accessibility</a></li>
-   </ul>
-  </nav>
+  <nav class="page-navigation"></nav>
 
 
   <p>A search input provides visitors an input field to search for specific content within a site or
@@ -55,7 +46,7 @@ permalink: "structure/search.html"
    include a search results page for your website.</p>
 
 
-  <h2 id="Active-search">Active search</h2>
+  <h2>Active search</h2>
   <p>This search bar appears on the right side of the header. This is the default search bar in the template.</p>
 
   <div class="tab-group responsive">
@@ -154,7 +145,7 @@ permalink: "structure/search.html"
 
 
 
-  <h2 id="Inactive-search">Inactive search</h2>
+  <h2>Inactive search</h2>
   <p>This search bar is hidden (inactive) and becomes active when people select the search menu icon. This search is
    used on mobile and for sites that use <a href="/structure/navigation-icons.html">icon menu</a> (which includes the
    search icon).
@@ -259,7 +250,7 @@ permalink: "structure/search.html"
 
 
 
-  <h2 id="Featured-search">Featured search</h2>
+  <h2>Featured search</h2>
   <p>This search is directly under the main menu in a prominent container. It's size and location means the website is
    intentionally showcasing search as a top task.</p>
 
@@ -384,7 +375,7 @@ search: Featured
 
 
 
-  <h2 id="Usage">Usage</h2>
+  <h2>Usage</h2>
   <h3>When and how to use it</h3>
 
   <p>Always use a clear and concise label for your search bar. Visitors should readily understand what the search is
@@ -406,7 +397,7 @@ search: Featured
 
   <p>Do not default to an advanced search. The majority of visitors will want to do a simple keyword search.</p>
 
-  <h2 id="Accessibility">Accessibility</h2>
+  <h2>Accessibility</h2>
   {% include "../../src/_includes/modules/accessibility.html" %}
 
  </div>
