--- a/pages/sample/table.html
+++ b/pages/sample/table.html
@@ -7,20 +7,11 @@ permalink: "components/table.html"
 
 <h1 class="mt-lg-0">Table</h1>
 
-<nav aria-labelledby="page-navigation-label" class="page-navigation">
- <div id="page-navigation-label" class="label">On this page</div>
- <ul class="columns-2">
-  <li><a href="#Basic">Basic</a></li>
-  <li><a href="#Shaded">Shaded</a></li>
-  <li><a href="#Zebra">Zebra</a></li>
-  <li><a href="#Usage">Usage</a></li>
-  <li><a href="#Accessibility">Accessibility</a></li>
- </ul>
-</nav>
+<nav class="page-navigation"></nav>
 
 <p>A table displays data in rows and columns. </p>
 
-<h2 id="Basic">Basic</h2>
+<h2>Basic</h2>
 <!--TABS-->
 <div class="tab-group responsive">
  <ul id="tabs1" class="nav nav-tabs" role="tablist">
@@ -70,7 +61,7 @@ permalink: "components/table.html"
 </div>
 <!--END TABS-->
 
-<h2 id="Shaded">Shaded</h2>
+<h2>Shaded</h2>
 <!--TABS-->
 <div class="tab-group responsive">
  <ul id="tabs2" class="nav nav-tabs" role="tablist">
@@ -120,7 +111,7 @@ permalink: "components/table.html"
 </div>
 <!--END TABS-->
 
-<h2 id="Zebra">Zebra</h2>
+<h2>Zebra</h2>
 <!--TABS-->
 <div class="tab-group responsive">
  <ul id="tabs3" class="nav nav-tabs" role="tablist">
@@ -170,7 +161,7 @@ permalink: "components/table.html"
 </div>
 <!--END TABS-->
 
-<h2 id="Usage">Usage</h2>
+<h2>Usage</h2>
 <h3>When and how to use it</h3>
 <p>A table helps visitors scan and understand information by grouping similar content.</p>
 <p>Use the table component to show long lists of sequential or structured content. This makes your content easier to
@@ -190,5 +181,6 @@ permalink: "components/table.html"
 <p>Do not use a table to demonstrate complex relationships in the data. Use a bar graph, infographic or chart instead.
 </p>
 <p>Do not use a table to format a web page.</p>
-<h2 id="Accessibility">Accessibility</h2>
+
+<h2>Accessibility</h2>
 {% include "../../src/_includes/modules/accessibility.html" %}
