--- a/pages/structure.html
+++ b/pages/structure.html
@@ -31,17 +31,11 @@ permalink: "structure.html"
 
   <h1 class="mt-lg-0">Structure</h1>
 
-  <nav aria-labelledby="page-navigation-label" class="page-navigation">
-   <div id="page-navigation-label" class="label">On this page</div>
-   <ul>
-    <li><a href="#Webpage-structure">Webpage structure</a></li>
-    <li><a href="#Structural-elements">Structural elements</a></li>
-   </ul>
-  </nav>
+  <nav class="page-navigation"></nav>
 
   <p class="lead">Our structural components form the basic structure of a website using the State Web Template. This
    structure contains elements that connect web pages and can lead to a smooth user experience.</p>
-  <h2 id="Webpage-structure">Webpage structure</h2>
+  <h2>Webpage structure</h2>
   <p>
    The State Web Template uses includes as our main building components.</p>
 
@@ -137,7 +131,7 @@ permalink: "structure.html"
 
 
 
-  <h2 id="Structural-elements">Structural elements</h2>
+  <h2>Structural elements</h2>
 
 
   <div class="row">
