--- a/pages/sample/alert.html
+++ b/pages/sample/alert.html
@@ -8,14 +8,7 @@ permalink: "components/alert.html"
 
 
 <h1 class="mt-lg-0">Alert</h1>
-<nav aria-labelledby="page-navigation-label" class="page-navigation">
- <div id="page-navigation-label" class="label">On this page</div>
- <ul>
-  <li><a href="#Sample">Sample</a></li>
-  <li><a href="#Usage">Usage</a></li>
-  <li><a href="#Accessibility">Accessibility</a></li>
- </ul>
-</nav>
+<nav class="page-navigation"></nav>
 
 <p>The alert is for important, sometimes time-sensitive
  information. Reserve alerts for information the audience must read before anything else.</p>
@@ -28,7 +21,7 @@ permalink: "components/alert.html"
  <li>An “X” close icon that allows people to dismiss the alert</li>
 </ul>
 
-<h2 id="Sample">Sample</h2>
+<h2>Sample</h2>
 
 <!--TABS-->
 <div class="tab-group responsive">
@@ -243,7 +236,7 @@ alert: "../modules/alert-banner.html"
 
 
 
-<h2 id="Usage">Usage</h2>
+<h2>Usage</h2>
 <h3>When and how to use it</h3>
 <p>Use the alert sparingly. They alarm people and distract from other content.</p>
 <p>Be concise with your alert content. Use a link to send people to a page with the details.</p>
@@ -269,5 +262,5 @@ alert: "../modules/alert-banner.html"
  temporary.</p>
 
 
-<h2 id="Accessibility">Accessibility</h2>
+<h2>Accessibility</h2>
 {% include "../../src/_includes/modules/accessibility.html" %}
