--- a/pages/sample/breadcrumb.html
+++ b/pages/sample/breadcrumb.html
@@ -7,21 +7,14 @@ permalink: "components/breadcrumb.html"
 
 <h1 class="mt-lg-0">Breadcrumb</h1>
 
-<nav aria-labelledby="page-navigation-label" class="page-navigation">
- <div id="page-navigation-label" class="label">On this page</div>
- <ul>
-  <li><a href="#Sample">Sample</a></li>
-  <li><a href="#Usage">Usage</a></li>
-  <li><a href="#Accessibility">Accessibility</a></li>
- </ul>
-</nav>
+<nav class="page-navigation"></nav>
 
 <p>The breadcrumb component helps visitors understand where they are within a website’s structure and move
  between
  levels. </p>
 
 
-<h2 id="Sample">Sample</h2>
+<h2>Sample</h2>
 
 <!--TABS-->
 <div class="tab-group responsive">
@@ -75,7 +68,7 @@ permalink: "components/breadcrumb.html"
 </div>
 <!--END TABS-->
 
-<h2 id="Usage">Usage</h2>
+<h2>Usage</h2>
 <h3>When and how to use it </h3>
 <p>Use the breadcrumb component to help visitors orient themselves and move between multiple levels of a website.</p>
 <p>Use breadcrumbs to illustrate:</p>
@@ -95,5 +88,5 @@ structure.</p>
 
 
 
-<h2 id="Accessibility">Accessibility</h2>
+<h2>Accessibility</h2>
 {% include "../../src/_includes/modules/accessibility.html" %}
