--- a/pages/sample/button.html
+++ b/pages/sample/button.html
@@ -7,14 +7,7 @@ permalink: "components/button.html"
 
 <h1 class="mt-lg-0">Button</h1>
 
-<nav aria-labelledby="page-navigation-label" class="page-navigation">
- <div id="page-navigation-label" class="label">On this page</div>
- <ul>
-  <li><a href="#Sample">Sample</a></li>
-  <li><a href="#Usage">Usage</a></li>
-  <li><a href="#Accessibility">Accessibility</a></li>
- </ul>
-</nav>
+<nav class="page-navigation"></nav>
 
 <p>A button triggers an event or action. It informs the visitor that something will happen next.</p>
 <p>Buttons add visual prominence to the call to action and provide feedback on completed actions.</p>
@@ -26,7 +19,7 @@ permalink: "components/button.html"
  <li>Pause a process: <span class="text-bold">Save as draft</span></li>
 </ul>
 
-<h2 id="Sample">Sample</h2>
+<h2>Sample</h2>
 <p>Available button colors are based on your selected <a href="/visual-design/color.html">color theme</a>.</p>
 
 <!--TABS-->
@@ -98,7 +91,7 @@ permalink: "components/button.html"
 </div>
 <!--END TABS-->
 
-<h2 id="Usage">Usage</h2>
+<h2>Usage</h2>
 <h3>When and how to use it </h3>
 <p>Use buttons to communicate actions users can take to interact with a page. Buttons should be used consistently for
  the same types of tasks.</p>
@@ -127,5 +120,5 @@ permalink: "components/button.html"
 </p>Avoid using disabled buttons as they can be inaccessible and confusing to some visitors. If you must use a disabled
 button, inform visitors why the button is disabled and how to enable it.</p>
 
-<h2 id="Accessibility">Accessibility</h2>
+<h2>Accessibility</h2>
 {% include "../../src/_includes/modules/accessibility.html" %}
