--- a/pages/sample/card.html
+++ b/pages/sample/card.html
@@ -7,21 +7,13 @@ permalink: "patterns/card.html"
 
 <h1 class="mt-lg-0">Card</h1>
 
-
-<nav aria-labelledby="page-navigation-label" class="page-navigation">
- <div id="page-navigation-label" class="label">On this page</div>
- <ul>
-  <li><a href="#Sample">Sample</a></li>
-  <li><a href="#Usage">Usage</a></li>
-  <li><a href="#Accessibility">Accessibility</a></li>
- </ul>
-</nav>
+<nav class="page-navigation"></nav>
 
 <p>A card is a flexible, customizable container for content.
  It displays a snippet of information and can link to more details upon interaction.</p>
 
 
-<h2 id="Sample">Sample</h2>
+<h2>Sample</h2>
 
 <!--TABS-->
 <div class="tab-group responsive">
@@ -79,7 +71,7 @@ permalink: "patterns/card.html"
 <!--END TABS-->
 
 
-<h2 id="Usage">Usage</h2>
+<h2>Usage</h2>
 <h3>When and how to use it </h3>
 <p>Use cards to:</p>
 <ul>
@@ -104,5 +96,5 @@ permalink: "patterns/card.html"
 <p>Do not overload the card content. The visitor expects to find more detailed information elsewhere, so it is okay to
  keep it brief.</p>
 
-<h2 id="Accessibility">Accessibility</h2>
+<h2>Accessibility</h2>
 {% include "../../src/_includes/modules/accessibility.html" %}
