--- a/pages/sample/css-spacing.html
+++ b/pages/sample/css-spacing.html
@@ -25,13 +25,7 @@ permalink: "get-started/css-classes-shortcuts/spacing.html"
   <h1 class="mt-lg-0">Spacing</h1>
 
 
-  <nav aria-labelledby="page-navigation-label" class="page-navigation">
-   <div id="page-navigation-label" class="label">On this page</div>
-   <ul>
-    <li><a href="#Using-the-spacing-class">Using the spacing class</a></li>
-    <li><a href="#Sample">Sample</a></li>
-   </ul>
-  </nav>
+  <nav class="page-navigation"></nav>
 
 
   <div>
@@ -46,7 +40,7 @@ permalink: "get-started/css-classes-shortcuts/spacing.html"
    </p>
   </div>
 
-  <h2 id="Using-the-spacing-class">Using the spacing class</h2>
+  <h2>Using the spacing class</h2>
   <p>The spacing class is made of three parts:</p>
 
   <div class="m-b-lg">
@@ -108,7 +102,7 @@ permalink: "get-started/css-classes-shortcuts/spacing.html"
    </li>
   </ol>
 
-  <h2 id="Sample">Sample</h2>
+  <h2>Sample</h2>
   <p>Here is a sample of a card using the spacing class with all three parts.</p>
 
   <pre class="m-y-lg">
