--- a/pages/sample/horizontal-separator.html
+++ b/pages/sample/horizontal-separator.html
@@ -8,20 +8,13 @@ permalink: "components/horizontal-separator.html"
 <p class="subtitle">Other names: horizontal rule, divider</p>
 
 
-<nav aria-labelledby="page-navigation-label" class="page-navigation">
- <div id="page-navigation-label" class="label">On this page</div>
- <ul>
-  <li><a href="#Sample">Sample</a></li>
-  <li><a href="#Usage">Usage</a></li>
-  <li><a href="#Accessibility">Accessibility</a></li>
- </ul>
-</nav>
+<nav class="page-navigation"></nav>
 
 <p>The horizontal separator is a style component that uses a line to separate content into sections.</p>
 
 
 
-<h2 id="Sample">Sample</h2>
+<h2>Sample</h2>
 
 <!--TABS-->
 <div class="tab-group responsive">
@@ -72,7 +65,7 @@ permalink: "components/horizontal-separator.html"
 </div>
 <!--END TABS-->
 
-<h2 id="Usage">Usage</h2>
+<h2>Usage</h2>
 <h3>When and how to use it</h3>
 <p>Use the horizontal separator to divide sections of content. This breaks up long pages of text and allows visitors to
  process your most important message first.
@@ -82,5 +75,5 @@ permalink: "components/horizontal-separator.html"
 <p>Do not abuse horizontal separators and avoid separating content that belongs together. If a section is lengthy,
  consider adding headings and removing unnecessary words. </p>
 
-<h2 id="Accessibility">Accessibility</h2>
+<h2>Accessibility</h2>
 {% include "../../src/_includes/modules/accessibility.html" %}
