--- a/pages/sample/link-grid.html
+++ b/pages/sample/link-grid.html
@@ -7,14 +7,7 @@ permalink: "patterns/link-grid.html"
 
 <h1 class="mt-lg-0">Link grid</h1>
 
-<nav aria-labelledby="page-navigation-label" class="page-navigation">
- <div id="page-navigation-label" class="label">On this page</div>
- <ul>
-  <li><a href="#Sample">Sample</a></li>
-  <li><a href="#Usage">Usage</a></li>
-  <li><a href="#Accessibility">Accessibility</a></li>
- </ul>
-</nav>
+<nav class="page-navigation"></nav>
 
 
 <p>The link grid organizes the frequently used pages or top level calls to action. It guides people to important
@@ -22,7 +15,7 @@ permalink: "patterns/link-grid.html"
 <p>When viewed on a computer, the grid is a maximum of 3 links wide. On mobile devices, this grid stacks into a single
  column.</p>
 
-<h2 id="Sample">Sample</h2>
+<h2>Sample</h2>
 
 <!--TABS-->
 <div class="tab-group responsive">
@@ -75,7 +68,7 @@ permalink: "patterns/link-grid.html"
  </div>
 </div>
 <!--END TABS-->
-<h2 id="Usage">Usage</h2>
+<h2>Usage</h2>
 <h3>When and how to use it</h3>
 <p>Use the link grid to highlight the top things people need. Organize the links in a way that makes sense for people’s
  primary needs and lead users to specific content.</p>
@@ -88,5 +81,5 @@ permalink: "patterns/link-grid.html"
 <p>Because the grid collapses into one column on mobile, large grids may occupy several screens. This can hide lower
  links.</p>
 
-<h2 id="Accessibility">Accessibility</h2>
+<h2>Accessibility</h2>
 {% include "../../src/_includes/modules/accessibility.html" %}
