--- a/pages/sample/modal.html
+++ b/pages/sample/modal.html
@@ -11,15 +11,7 @@ permalink: "components/modal.html"
 <p class="subtitle">Other names: popup window, overlay, dialog</p>
 
 
-<nav aria-labelledby="page-navigation-label" class="page-navigation">
- <div id="page-navigation-label" class="label">On this page</div>
- <ul>
-  <li><a href="#How-it-works">How it works</a></li>
-  <li><a href="#Sample">Sample</a></li>
-  <li><a href="#Usage">Usage</a></li>
-  <li><a href="#Accessibility">Accessibility</a></li>
- </ul>
-</nav>
+<nav class="page-navigation"></nav>
 
 
 <p>A modal displays content in a temporary window that appears over the current page. </p>
@@ -39,7 +31,7 @@ permalink: "components/modal.html"
  <li>User feedback</li>
 </ul>
 
-<h2 id="How-it-works">How it works</h2>
+<h2>How it works</h2>
 <p>To trigger the modal, you'll need to include a link or a button that will trigger the modal. The trigger button
  element has two custom data attributes: <code>data-bs-toggle</code> and <code>data-bs-target</code>. The
  toggle attribute tells framework what to do and the target tells framework which element to open. So,
@@ -47,7 +39,7 @@ permalink: "components/modal.html"
  appear.
 
 </p>
-<h2 id="Sample">Sample</h2>
+<h2>Sample</h2>
 
 <!--TABS-->
 <div class="tab-group responsive">
@@ -111,7 +103,7 @@ permalink: "components/modal.html"
 </div>
 <!--END TABS-->
 
-<h2 id="Usage">Usage</h2>
+<h2>Usage</h2>
 <h3>When and how to use it </h3>
 <p>Modals interrupt your visitor. Use them sparingly and only when the content or interaction is critical to your
  visitors’ success. </p>
@@ -126,7 +118,7 @@ permalink: "components/modal.html"
 
 
 
-<h2 id="Accessibility">Accessibility</h2>
+<h2>Accessibility</h2>
 {% include "../../src/_includes/modules/accessibility.html" %}
 
 
