--- a/pages/sample/number-counter.html
+++ b/pages/sample/number-counter.html
@@ -8,21 +8,14 @@ permalink: "components/number-counter.html"
 <h1 class="mt-lg-0 m-b-0">Number counter</h1>
 <p class="subtitle">Other names: number animation</p>
 
-<nav aria-labelledby="page-navigation-label" class="page-navigation">
- <div id="page-navigation-label" class="label">On this page</div>
- <ul>
-  <li><a href="#Sample">Sample</a></li>
-  <li><a href="#Usage">Usage</a></li>
-  <li><a href="#Accessibility">Accessibility</a></li>
- </ul>
-</nav>
+<nav class="page-navigation"></nav>
 
 
 <p>The number counter adds animation and counts up to a set number.</p>
 
 
 
-<h2 id="Sample">Sample</h2>
+<h2>Sample</h2>
 
 <!--TABS-->
 <div class="tab-group responsive">
@@ -78,7 +71,7 @@ permalink: "components/number-counter.html"
 
 
 
-<h2 id="Usage">Usage</h2>
+<h2>Usage</h2>
 <h3>When and how to use it </h3>
 <p>Use the rolling number counter component to add visual variety to important data. This is often used on homepages.
 </p>
@@ -88,5 +81,5 @@ permalink: "components/number-counter.html"
 
 
 
-<h2 id="Accessibility">Accessibility</h2>
+<h2>Accessibility</h2>
 {% include "../../src/_includes/modules/accessibility.html" %}
