--- a/pages/sample/progress-bar.html
+++ b/pages/sample/progress-bar.html
@@ -7,19 +7,12 @@ permalink: "components/progress-bar.html"
 
 <h1 class="mt-lg-0">Progress bar</h1>
 
-<nav aria-labelledby="page-navigation-label" class="page-navigation">
- <div id="page-navigation-label" class="label">On this page</div>
- <ul>
-  <li><a href="#Sample">Sample</a></li>
-  <li><a href="#Usage">Usage</a></li>
-  <li><a href="#Accessibility">Accessibility</a></li>
- </ul>
-</nav>
+<nav class="page-navigation"></nav>
 
 <p>The progress bar displays the current status of a multi-step task. It is usually updated continuously as the task
  progresses and shows the level of completeness.</p>
 
-<h2 id="Sample">Sample</h2>
+<h2>Sample</h2>
 
 <!--TABS-->
 <div class="tab-group responsive">
@@ -69,7 +62,7 @@ permalink: "components/progress-bar.html"
 </div>
 <!--END TABS-->
 
-<h2 id="Usage">Usage</h2>
+<h2>Usage</h2>
 <h3>When and how to use it</h3>
 <p>Use a progress bar to display completeness of a multi-step task. Completeness is often shown as a percentage or
  number completed out of a total number of steps.</p>
@@ -78,5 +71,5 @@ permalink: "components/progress-bar.html"
 <h3>How not to use it</h3>
 <p>Do not use the progress bar to display progress of unrelated tasks.</p>
 
-<h2 id="Accessibility">Accessibility</h2>
+<h2>Accessibility</h2>
 {% include "../../src/_includes/modules/accessibility.html" %}
