--- a/pages/sample/social-media-icons.html
+++ b/pages/sample/social-media-icons.html
@@ -8,17 +8,10 @@ permalink: "components/social-media-icons.html"
 
 <h1 class="mt-lg-0">Social media icons</h1>
 
-<nav aria-labelledby="page-navigation-label" class="page-navigation">
- <div id="page-navigation-label" class="label">On this page</div>
- <ul>
-  <li><a href="#Sample">Sample</a></li>
-  <li><a href="#Usage">Usage</a></li>
-  <li><a href="#Accessibility">Accessibility</a></li>
- </ul>
-</nav>
+<nav class="page-navigation"></nav>
 
 <p>The social media icons component lets you share your agency’s social media pages with visitors.</p>
-<h2 id="Sample">Sample</h2>
+<h2>Sample</h2>
 
 <!--TABS-->
 <div class="tab-group responsive">
@@ -73,7 +66,7 @@ permalink: "components/social-media-icons.html"
 </div>
 <!--END TABS-->
 
-<h2 id="Usage">Usage</h2>
+<h2>Usage</h2>
 <h3>When and how to use it </h3>
 <p>Use social media icons in the site footer. These icons should link to your official social media accounts. </p>
 <p>The available social media icons include:</p>
@@ -95,5 +88,5 @@ permalink: "components/social-media-icons.html"
 
 
 
-<h2 id="Accessibility">Accessibility</h2>
+<h2>Accessibility</h2>
 {% include "../../src/_includes/modules/accessibility.html" %}
