--- a/pages/sample/structure-settings-bar.html
+++ b/pages/sample/structure-settings-bar.html
@@ -26,14 +26,9 @@ permalink: "structure/settings-bar.html"
 
 
   <h1 class="mt-lg-0">Settings</h1>
-  <nav aria-labelledby="page-navigation-label" class="page-navigation">
-   <div id="page-navigation-label" class="label">On this page</div>
-   <ul>
-    <li><a href="#Sample">Sample</a></li>
-    <li><a href="#Usage">Usage</a></li>
-    <li><a href="#Accessibility">Accessibility</a></li>
-   </ul>
-  </nav>
+
+  <nav class="page-navigation"></nav>
+
   <p>Website settings become visible after selecting the gear icon in the upper right hand corner.</p>
   <p>The settings allows visitors to:</p>
 
@@ -44,7 +39,7 @@ permalink: "structure/settings-bar.html"
    <li>Users can also reset the settings.</li>
   </ul>
 
-  <h2 id="Sample">Sample</h2>
+  <h2>Sample</h2>
 
   <div class="tab-group responsive">
    <ul id="tabs2" class="nav nav-tabs" role="tablist">
@@ -130,7 +125,7 @@ permalink: "structure/settings-bar.html"
   </div>
 
 
-  <h2 id="Usage">Usage</h2>
+  <h2>Usage</h2>
 
 
   <h3>When and how to use it</h3>
@@ -142,7 +137,7 @@ permalink: "structure/settings-bar.html"
   <h3>How not to use it</h3>
   <p>Do not add other elements to the settings component. Use it only as designed.</p>
 
-  <h2 id="Accessibility">Accessibility</h2>
+  <h2>Accessibility</h2>
   {% include "../../src/_includes/modules/accessibility.html" %}
 
  </div>
