--- a/pages/sample/structure-site-header.html
+++ b/pages/sample/structure-site-header.html
@@ -26,14 +26,9 @@ permalink: "structure/site-header.html"
 
 
   <h1 class="mt-lg-0">Site header</h1>
-  <nav aria-labelledby="page-navigation-label" class="page-navigation">
-   <div id="page-navigation-label" class="label">On this page</div>
-   <ul>
-    <li><a href="#Sample">Sample</a></li>
-    <li><a href="#Usage">Usage</a></li>
-    <li><a href="#Accessibility">Accessibility</a></li>
-   </ul>
-  </nav>
+
+  <nav class="page-navigation"></nav>
+
   <p>The site header puts your site's name at the top of your website, under the utility header. This
    allows people to
    readily identify the site they're visiting. If they interact with the site's name, it returns them to the site's
@@ -51,7 +46,7 @@ permalink: "structure/site-header.html"
    the header, it is a separate structural element and is optional. Review <a href="/structure/search.html">Search</a>
    for more information.</a></p>
 
-  <h2 id="Sample">Sample</h2>
+  <h2>Sample</h2>
 
   <div class="tab-group responsive">
    <ul id="tabs2" class="nav nav-tabs" role="tablist">
@@ -138,7 +133,7 @@ permalink: "structure/site-header.html"
   </div>
 
 
-  <h2 id="Usage">Usage</h2>
+  <h2>Usage</h2>
   <h3>When and how to use it</h3>
 
   <p>The site header goes on all pages of your website. </p>
@@ -152,7 +147,7 @@ permalink: "structure/site-header.html"
    display.</p>
 
 
-  <h2 id="Accessibility">Accessibility</h2>
+  <h2>Accessibility</h2>
   {% include "../../src/_includes/modules/accessibility.html" %}
 
 
