--- a/pages/sample/tabs.html
+++ b/pages/sample/tabs.html
@@ -9,14 +9,7 @@ permalink: "components/tabs.html"
 
 <h1 class="mt-lg-0">Tabs</h1>
 
-<nav aria-labelledby="page-navigation-label" class="page-navigation">
- <div id="page-navigation-label" class="label">On this page</div>
- <ul>
-  <li><a href="#Sample">Sample</a></li>
-  <li><a href="#Usage">Usage</a></li>
-  <li><a href="#Accessibility">Accessibility</a></li>
- </ul>
-</nav>
+<nav class="page-navigation"></nav>
 
 
 <p>Tabs organize related content into panels and enable visitors to navigate between them. Each panel displays one at a
@@ -24,7 +17,7 @@ permalink: "components/tabs.html"
 <p>Tabs reduce clutter by forming a unit of related content and fitting more information into a smaller space.</p>
 
 
-<h2 id="Sample">Sample</h2>
+<h2>Sample</h2>
 
 <!--TABS-->
 <div class="tab-group responsive">
@@ -84,7 +77,7 @@ permalink: "components/tabs.html"
 
 
 
-<h2 id="Usage">Usage</h2>
+<h2>Usage</h2>
 <h3>When and how to use it</h3>
 <p>Use tabs to group similar information on the same page. This allows visitors to switch between content without
  navigating away from that page or workflow to complete a task.</p>
@@ -111,5 +104,5 @@ permalink: "components/tabs.html"
 </ul>
 
 
-<h2 id="Accessibility">Accessibility</h2>
+<h2>Accessibility</h2>
 {% include "../../src/_includes/modules/accessibility.html" %}
