--- a/pages/sample/typography.html
+++ b/pages/sample/typography.html
@@ -21,14 +21,7 @@ permalink: "visual-design/typography.html"
 
   <h1 id="Typography" class="mt-lg-0">Typography</h1>
 
-  <nav aria-labelledby="page-navigation-label" class="page-navigation">
-   <div id="page-navigation-label" class="label">On this page</div>
-   <ul>
-    <li><a href="#Typeface">Typeface</a></li>
-    <li><a href="#Font-code">Font code</a></li>
-    <li><a href="#Heading-hierarchy">Heading hierarchy</a></li>
-   </ul>
-  </nav>
+  <nav class="page-navigation"></nav>
 
   <p>
    Use typography to present your department’s brand and content as clearly as possible.
@@ -36,7 +29,7 @@ permalink: "visual-design/typography.html"
 
   <div class="row">
    <div class="col-md-7 p-r-lg">
-    <h2 id="Typeface">Typeface</h2>
+    <h2>Typeface</h2>
     <p>
      The State Web Template uses <a href="https://public-sans.digital.gov/">Public Sans</a> designed by the <a
       href="https://designsystem.digital.gov/">United States Web Design System</a>. This strong, neutral typeface
@@ -56,7 +49,7 @@ permalink: "visual-design/typography.html"
    </div>
   </div>
 
-  <h2 id="Font-code">Font code</h2>
+  <h2>Font code</h2>
 
   <table id="fontcodetable" class="">
    <thead>
@@ -92,7 +85,7 @@ permalink: "visual-design/typography.html"
    </tbody>
   </table>
 
-  <h2 id="Heading-hierarchy">Heading hierarchy</h2>
+  <h2>Heading hierarchy</h2>
   <p>The line height is a ratio of 1.75 to the base font size. For each ascending level, the ratio is decreased by ⅛.
    As a result, larger headings have smaller line-height ratios, which improves readability.</p>
 
