--- a/pages/whats-new.html
+++ b/pages/whats-new.html
@@ -30,28 +30,18 @@ permalink: "whats-new.html"
  <div class="col-md-9 p-b-lg">
 
   <h1 class="mt-lg-0">What's new in V6</h1>
-  <nav aria-labelledby="page-navigation-label" class="page-navigation">
-   <div id="page-navigation-label" class="label">On this page</div>
-   <ul class="columns-2">
-    <li><a href="#Patterns">Patterns</a></li>
-    <li><a href="#Code">Code</a></li>
-    <li><a href="#Navigation">Navigation</a></li>
-    <li><a href="#Visual-design">Visual design</a></li>
-    <li><a href="#Components">Components</a></li>
-    <li><a href="#User-experience">User experience</a></li>
-    <li><a href="#Brand-new-content">Brand new content</a></li>
-   </ul>
-  </nav>
+
+  <nav class="page-navigation"></nav>
 
   <p>Version 6 of the State Web Template has a new look and feel. With improvements that align with the
    <a href="https://designsystem.webstandards.ca.gov/">California Design System</a>, V6 sets a modern digital standard.
   </p>
-  <h2 id="Patterns">Patterns</h2>
+  <h2>Patterns</h2>
   <p>Content patterns are a brand new addition to the State Web Template. Patterns are reusable combinations of
    components that solve common user problems. These best practice solutions help users achieve their goals and help
    ensure consistency across experiences.</p>
 
-  <h2 id="Code">Code</h2>
+  <h2>Code</h2>
   <p>The template code was updated to modernize your site's structure and framework. These updates include:</p>
   <ul>
    <li>Rebuilding the framework to use eleventy site generation.</li>
@@ -62,7 +52,7 @@ permalink: "whats-new.html"
    <li>Enabled sites to render markdown files in HTML.</li>
   </ul>
 
-  <h2 id="Navigation">Navigation</h2>
+  <h2>Navigation</h2>
   <p>With better wayfinding and new side navigation, developing user-friendly websites is easier than ever. Some of
    these improvements include:</p>
   <ul>
@@ -71,7 +61,7 @@ permalink: "whats-new.html"
    <li>An improved <a href="/components/breadcrumb.html">breadcrumb component</a>.</li>
   </ul>
 
-  <h2 id="Visual-design">Visual design</h2>
+  <h2>Visual design</h2>
   <p>The template, website, and most components have been redesigned to:</p>
   <ul>
    <li>Visually align the <a href="/structure.html">structure</a>, <a
@@ -82,7 +72,7 @@ permalink: "whats-new.html"
    <li>Added new icons to the icons font library (copy, cut, paste, save, and quotation mark).</li>
   </ul>
 
-  <h2 id="Components">Components</h2>
+  <h2>Components</h2>
   <p>We improved the overall design and functionality of all our components.</p>
   <p>Components in the V6 release:</p>
   <ul>
@@ -91,7 +81,7 @@ permalink: "whats-new.html"
    <li>Improve blockquote, tabs, and accordion components.</li>
   </ul>
 
-  <h2 id="User-experience">User experience</h2>
+  <h2>User experience</h2>
   <p>V6 includes new page layouts and features to help you find and use the template content you need. Some user
    experience improvements include:</p>
   <ul>
@@ -101,7 +91,7 @@ permalink: "whats-new.html"
    </li>
   </ul>
 
-  <h2 id="Brand-new-content">Brand new content</h2>
+  <h2>Brand new content</h2>
   <p>The website content was completely rewritten and expanded, with a focus on usability and plain language. These
    updates include:</p>
   <ul>
