--- a/pages/structure.html
+++ b/pages/structure.html
@@ -14,7 +14,8 @@ permalink: "structure.html"
   <!-- Side navigation -->
   <nav aria-labelledby="navigation-list" class="side-navigation sticky-6">
    <ul class="list-navigation">
-    <li><a href="/structure.html" id="navigation-list" class="active landing">Structural elements</a></li>
+    <li><a href="/structure.html" id="navigation-list" class="active landing">Structural elements <span
+       class="sr-only">landing page</span></a></li>
     <li><a href="/structure/utility-header.html">Utility header</a></li>
     <li><a href="/structure/settings-bar.html">Settings</a></li>
     <li><a href="/structure/site-header.html">Site header</a></li>
